--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ h4 {
     margin: 0 !important;
 }
 
-header {
+.index-header {
     background-image: url("../img/HeaderBG.png");
     background-size: 100% auto;
     background-position: center;
@@ -222,4 +222,8 @@ ul {
 
 .footer-contacts {
     padding-left: 101px;
+}
+
+.blog-card-date {
+    font-size: 16px;
 }
